# FileFlow

./: .env.example  .gitignore  README.md  package.sh
.github/workflows/: release.yml
server/: Cargo.toml  package.json
server/src/: db.rs  main.rs  router.rs
server/src/dao/: db.rs  memdb.rs  mod.rs
server/src/service/: entity.rs  handler.rs  mod.rs  signaling.rs  static_files.rs
server/src/utils/: memdb.rs  mod.rs  nanoid.rs
web/: components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/download/: index.html
web/src/pages/download/: App.vue  index.html
web/src/pages/home/: App.vue  main.ts
web/src/pages/upload/: App.vue  index.html  main.ts
web/src/utils/: asyncPool.ts  getSHA256.ts  requests.ts  webrtc.ts
web/upload/: index.html
