[package]
name = "FileFlow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["http2", "multipart"] }
rust-embed = "8.7.2"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tower-http = { version = "0.6.6", features = ["fs"] }
lazy_static = "1.5.0"
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
async-stream = "0.3.6"

[profile.release]
opt-level = 2
lto = true
strip = true