[package]
name = "FileFlow"
version = "0.3.1"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["http2", "multipart"] }
rust-embed = "8.7.2"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["fs", "timeout"] }
lazy_static = "1.5.0"
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
mime_guess = "2.0.5"
dotenvy = "0.15.7"

[profile.release]
opt-level = 1
lto = true
strip = true
